# Multi-view-Identity

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_TRAINING.md  ci.yml  pyproject.toml
eval/: README_eval.md  eval.md  eval_metrics.py  metrics_desc.md
multi_view/: ATTN_MASK_IMPL_NOTES.md  EDITED_LOGIC_NOTES_CN.md  TRAINING_GUIDE.md  TRAIN_FLOW_SOFTMASK.md  check_fp32.py  merge.sh  merge_8_shards.py  merge_checkpoint.py  merge_checkpoint_v2.py  test.py  test.sh  train.py  train.sh  train_multi_node.sh  train_multi_node_5B.sh
multi_view/DiffSynth-Studio-main/diffsynth/configs/: model_config.py
multi_view/DiffSynth-Studio-main/diffsynth/models/: downloader.py  lora.py  model_manager.py  wan_video_dit.py  wan_video_vae.py
multi_view/DiffSynth-Studio-main/diffsynth/pipelines/: __init__.py  base.py  wan_video_new copy.py  wan_video_new.py
multi_view/DiffSynth-Studio-main/diffsynth/prompters/: wan_prompter.py
multi_view/DiffSynth-Studio-main/diffsynth/trainers/: timer.py  utils.py
multi_view/DiffSynth-Studio-main/diffsynth/utils/: __init__.py
multi_view/conf/: accelerate_config_14B.yaml  accelerate_config_14B_L_multi-node.yaml  accelerate_config_5B.yaml  accelerate_config_5B_L_multi-node.yaml  accelerate_config_5B_multi-node.yaml  deepspeed_config.json  ds_config_multinode.json  multi-view.yaml
multi_view/datasets/: __init__.py  filter_duration.py  videodataset.py  videodataset_bak.py  videodataset_bak2.py  videodataset_movie.py
